[plugin-native-app] Fix status bar calculation for android tv